--- a/lab-final.ipynb
+++ b/lab-final.ipynb
@@ -761,7 +761,26 @@
     "The R2 score for the model means that ~77.95% of the variation in the *total_claim_amount* can be explained by variations in the rest of the variables. Whilst this is not a bad result, it could benefit from some improvement, either by:\n",
     "- gathering more data \n",
     "* changing the model used to fit the data\n",
-    "- exploring other variables that might influence the dataset"
+    "- exploring other variables that might influence the dataset\n",
+    "\n",
+    "By looking at the coefficients, we can see which variables have the most weight in the model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coefficients = pd.DataFrame(data=model.coef_, index=X.columns)\n",
+    "print(coefficients)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can see that the *monthly_premium_auto* has the largest weight in our model and it's positively correlated with the *total_claim_amount*, suggesting that customers with a higher premium also claim more overall. Most of the other features have a less than 10x smaller weight in the model, suggesting they're not as indicative of the *total_claim_amount*, even when compounded (e.g. in the case of categorical columns, which were one-hot encoded). This might be explained by the fact that higher monthly premium autos also involve the possibility to claim more in the case of an accident. Therefore, the results do not point to an obvious course of action for the business, other than gathering more data or potentially using industry data. "
    ]
   }
  ],
